# win-panel

./: Cargo.toml  README.md  go.mod  go.sum  main.go
router/: main.go
src/: main.rs
src/api/: drive.rs
src/router/: drive_router.rs  info.rs  main_router.rs  memory_router.rs  mod.rs  web.rs
src/service/: cpu.rs  drive.rs  memory.rs  mod.rs  networks.rs
util/: disk.go
