[package]
name = "win-panel"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = "0.6.20"
tokio = { version = "1.33.0", features = ["full"] }
tower = "0.4.13"
serde = {version ="1.0.188",features = ["derive"]}
serde_json = "1.0.107"
winapi = { version = "0.3", features = ["winuser", "winbase", "fileapi"] }
